--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,4 +106,10 @@ dependencies {
     //UI Automator
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'androidx.test:rules:1.4.0-rc01'
+
+    //Test of fragments
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.5'
+
+    //RecyclerView
+    debugImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 }
