--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,13 +75,17 @@ android {
 }
 
 dependencies {
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
 
     //RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
@@ -117,4 +121,11 @@ dependencies {
 
     //RecyclerView
     debugImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+
+    //JUnit Rule - InstantTaskExecutorRule
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+    //Coroutines
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
 }
